# pmdb

./: .gitignore  README.md  pyproject.toml
app/: database.py  deps.py  main.py  model.py  schemas.py
app/models/: movie.py
app/routers/: movie.py
app/schemas/: movie.py
tests/: conftest.py  test_database.py  test_models.py  test_routers.py  test_schemas.py
tests/utils/: db.py
