[project]
name = "pmdb"
version = "0.1.0"
description = "a personal movie database"
authors = [
    {name = "stationaryaction",email = "kevin.holway@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)"
]

[tool.poetry]
packages = [
    {include = "pmdb", from = "src"},
    {include = "app"}
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
